-Changed toopdialog element order. -Fixed eoForm ui fields alignment

--- a/designer/designer-frontend/src/app/procedure-eo/procedure-eo.component.css
+++ b/designer/designer-frontend/src/app/procedure-eo/procedure-eo.component.css
@@ -28,7 +28,7 @@
   display:flex;
   justify-content: center;
   flex-direction: row;
-  align-items: center;
+  align-items: start;
 
 }
 .mat-expansion-panel-header {
